--- a/assets/partials/color-tool.html
+++ b/assets/partials/color-tool.html
@@ -8,11 +8,11 @@
                 <div class="theme-card">
                     <button class="theme-swatch" data-theme="auburn" title="Auburn">
                         <div class="swatch-preview">
-                            <span style="background:#642F37"></span>
-                            <span style="background:#C0350F"></span>
-                            <span style="background:#F3904B"></span>
-                            <span style="background:#F7C767"></span>
+                            <span style="background:#2A1A1E"></span>
+                            <span style="background:#332126"></span>
+                            <span style="background:#B63A1B"></span>
                             <span style="background:#B89DBB"></span>
+                            <span style="background:#F7C767"></span>
                         </div>
                         <span class="theme-label">Auburn</span>
                     </button>
@@ -20,12 +20,12 @@
                 <div class="theme-card">
                     <button class="theme-swatch" data-theme="desert" title="Desert">
                         <div class="swatch-preview">
-                            <span style="background:#ae5433"></span>
-                            <span style="background:#ecc481"></span>
-                            <span style="background:#aa462d"></span>
-                            <span style="background:#9e895f"></span>
-                            <span style="background:#d5c79f"></span>
-                            <span style="background:#4a4231"></span>
+                            <span style="background:#272116"></span>
+                            <span style="background:#312A1C"></span>
+                            <span style="background:#A24D31"></span>
+                            <span style="background:#ECC481"></span>
+                            <span style="background:#9E895F"></span>
+                            <span style="background:#D9D0C4"></span>
                         </div>
                         <span class="theme-label">Desert</span>
                     </button>
@@ -33,11 +33,11 @@
                 <div class="theme-card">
                     <button class="theme-swatch" data-theme="mother" title="Mother of Dragons">
                         <div class="swatch-preview">
-                            <span style="background:#080d22"></span>
-                            <span style="background:#531f4f"></span>
-                            <span style="background:#6e234b"></span>
+                            <span style="background:#0E1326"></span>
+                            <span style="background:#141B33"></span>
+                            <span style="background:#5B2A63"></span>
                             <span style="background:#932549"></span>
-                            <span style="background:#fdf3eb"></span>
+                            <span style="background:#FDF3EB"></span>
                         </div>
                         <span class="theme-label">Mother of Dragons</span>
                     </button>
@@ -45,11 +45,11 @@
                 <div class="theme-card">
                     <button class="theme-swatch" data-theme="orchid" title="Orchid Whisper">
                         <div class="swatch-preview">
-                            <span style="background:#CB438B"></span>
-                            <span style="background:#BF3556"></span>
-                            <span style="background:#6C6A43"></span>
-                            <span style="background:#4D3449"></span>
+                            <span style="background:#22161F"></span>
+                            <span style="background:#2B1C28"></span>
+                            <span style="background:#B63E7D"></span>
                             <span style="background:#FFF0D2"></span>
+                            <span style="background:#6C6A43"></span>
                         </div>
                         <span class="theme-label">Orchid Whisper</span>
                     </button>
@@ -57,11 +57,11 @@
                 <div class="theme-card">
                     <button class="theme-swatch" data-theme="pearls" title="Chinese Pearls">
                         <div class="swatch-preview">
-                            <span style="background:#414B9e"></span>
-                            <span style="background:#9792CB"></span>
+                            <span style="background:#171A2F"></span>
+                            <span style="background:#1D2140"></span>
+                            <span style="background:#4A55B3"></span>
                             <span style="background:#AA74A0"></span>
                             <span style="background:#E2C99E"></span>
-                            <span style="background:#8527736"></span>
                         </div>
                         <span class="theme-label">Chinese Pearls</span>
                     </button>
