--- a/assets/partials/right-panel.html
+++ b/assets/partials/right-panel.html
@@ -125,7 +125,7 @@
                                     <span style="background:#9792CB"></span>
                                     <span style="background:#AA74A0"></span>
                                     <span style="background:#E2C99E"></span>
-                                    <span style="background:#8527736"></span>
+                                    <span style="background:#852773"></span>
                                 </div>
                                 <span class="theme-label">Chinese Pearls</span>
                             </button>
