Phase 4C: stabilize injected UI init (sidebar/header/nav)

--- a/assets/partials/sidebar.html
+++ b/assets/partials/sidebar.html
@@ -19,7 +19,7 @@
                     <summary class="nav-label"><span class="nav-icon">⭐</span><span>Favorites</span></summary>
                     <ul id="navFav" class="nav-list"></ul>
                 </details>
-                <ul id="navSections" class="nav-sections">{{SECTIONS}}</ul>
+                <ul id="navSections" class="nav-sections"></ul>
                 <script src="/assets/nav-loader.js"></script>
             </nav>
             <!-- Weather card: DnD dice-driven weather generator -->
